<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".HowToUseApp">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/upperbackground"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

<!--        <ImageButton-->
<!--            android:id="@+id/menuButton"-->
<!--            android:layout_width="36dp"-->
<!--            android:layout_height="36dp"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:src="@drawable/menu"-->
<!--            android:contentDescription="Menu" />-->

        <ImageButton
            android:id="@+id/menu_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/button"
            android:background="@null"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="Menu Options"/>

        <TextView
            android:id="@+id/useAppHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/vollkorn"
            android:text="Confused about how to use our app?\nLet us help you with a step by step guideline."
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:paddingTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="28dp">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/vollkorn"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:text="@string/txt1"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/catright"
                    android:contentDescription="Step image" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="28dp">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/catleft"
                    android:contentDescription="Step image" />

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/vollkorn"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:text="@string/txt2"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="28dp">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/vollkorn"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:text="@string/txt3"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/catright"
                    android:contentDescription="Step image" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="28dp">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/catleft"
                    android:contentDescription="Step image" />

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/vollkorn"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:text="@string/txt4"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="28dp">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/vollkorn"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:text="@string/txt5"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/catright"
                    android:contentDescription="Step image" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="28dp">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/catleft"
                    android:contentDescription="Step image" />

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/vollkorn"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:text="@string/txt6"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

